force-app/main/default/objects/Logistics_Pricing__c/Logistics_Pricing__c.object-meta.xml
<CustomObject>
    <label>Logistics Pricing</label>
    <nameField>
        <label>Logistics Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logistic Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>