force-app/main/default/objects/Logistics_Pricing__c/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accommodation</label>
    <referenceTo>Accommodation__c</referenceTo>
    <relationshipLabel>Logistic Pricings</relationshipLabel>
    <relationshipName>Logistic_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>