force-app/main/default/objects/Logistics_Pricing__c/fields/Included_Meals__c.field-meta.xml
<CustomField>
    <fullName>Included_Meals__c</fullName>
    <label>Included Meals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>