force-app/main/default/objects/Logistics_Pricing__c/fields/Logistics_Type__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Type__c</fullName>
    <label>Logistics Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Meal</fullName>
            </value>
            <value>
                <fullName>Tours</fullName>
            </value>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>Guide</fullName>
            </value>
            <value>
                <fullName>Auswalk Misc</fullName>
            </value>
            <value>
                <fullName>National Park Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>