force-app/main/default/objects/Logistics_Pricing__c/fields/Meal__c.field-meta.xml
<CustomField>
    <fullName>Meal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meal</label>
    <referenceTo>Meal__c</referenceTo>
    <relationshipLabel>Logistic Pricings</relationshipLabel>
    <relationshipName>Logistic_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>