force-app/main/default/objects/Logistics_Pricing__c/fields/Meal_Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Meal_Course_Type__c</fullName>
    <label>Meal Course Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Course</fullName>
            </value>
            <value>
                <fullName>Two Course</fullName>
            </value>
            <value>
                <fullName>Three Course</fullName>
            </value>
            <value>
                <fullName>Four Course</fullName>
            </value>
            <value>
                <fullName>Five Course</fullName>
            </value>
            <value>
                <fullName>Six Course</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>