force-app/main/default/objects/Logistics_Pricing__c/fields/Number_of_nights__c.field-meta.xml
<CustomField>
    <fullName>Number_of_nights__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>