force-app/main/default/objects/Logistics_Pricing__c/fields/Price_Category__c.field-meta.xml
<CustomField>
    <fullName>Price_Category__c</fullName>
    <label>Price Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Pax</fullName>
            </value>
            <value>
                <fullName>Per Qty</fullName>
            </value>
            <value>
                <fullName>Additional Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>