force-app/main/default/objects/Logistics_Pricing__c/fields/Quantity_Category__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Category__c</fullName>
    <label>Quantity Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Twin Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>