force-app/main/default/objects/Logistics_Pricing__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room Type</label>
    <referenceTo>Room_Type__c</referenceTo>
    <relationshipLabel>Logistic Pricings</relationshipLabel>
    <relationshipName>Logistic_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>