force-app/main/default/objects/Logistics_Pricing__c/fields/Solo_Cost__c.field-meta.xml
<CustomField>
    <fullName>Solo_Cost__c</fullName>
    <label>Solo Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>