force-app/main/default/objects/Logistics_Pricing__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport</label>
    <referenceTo>Transport__c</referenceTo>
    <relationshipLabel>Logistic Pricings</relationshipLabel>
    <relationshipName>Logistic_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>