force-app/main/default/objects/Logistics_Pricing__c/recordTypes/Accomodation.recordType-meta.xml
<RecordType>
    <fullName>Accomodation</fullName>
    <active>true</active>
    <label>Accomodation</label>
</RecordType>