force-app/main/default/objects/Logistics_Pricing__c/recordTypes/Meal.recordType-meta.xml
<RecordType>
    <fullName>Meal</fullName>
    <active>true</active>
    <label>Meal</label>
</RecordType>